--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -51,6 +51,7 @@ pipeline {
         GIT_USER_NAME = "DevasaniNaveen"
     }
     steps {
+        cleanWs() // Cleans the workspace before running any commands
         withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
             sh '''
                 # Clone the repo
